refactor RawLakeLevelData to LakeLevelDataset