@@ -2,47 +2,57 @@ package dev.webecke.powellstats.aggregator;
 
 import dev.webecke.powellstats.model.CollectorResponse;
 import dev.webecke.powellstats.model.CurrentConditions;
-import dev.webecke.powellstats.model.RawLakeLevelData;
+import dev.webecke.powellstats.model.LakeLevelDataset;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.time.LocalDate;
+import java.util.Map;
 
 @Service
 public class CurrentConditionsAggregator {
-    public CurrentConditions aggregateCurrentConditions(CollectorResponse<RawLakeLevelData> lakeLevelData) {
-        if (!lakeLevelData.successful()) { return null; }
+    public CurrentConditions aggregateCurrentConditions(CollectorResponse<LakeLevelDataset> collectorResponse) {
+        if (!collectorResponse.successful()) { return null; }
 
-        RawLakeLevelData dataObject = lakeLevelData.data();
-        List<RawLakeLevelData.LakeLevelEntry> entries = dataObject.data();
+        LakeLevelDataset dataset = collectorResponse.data();
 
-        RawLakeLevelData.LakeLevelEntry mostRecentEntry = entries.get(0);
+        LakeLevelDataset.LakeLevelEntry today = dataset.chronologicalData().getFirst();
+        float todayElevation = today.elevationFeet();
+        LocalDate todayDate = today.date();
 
-        float oneDayChange = entries.get(0).elevationFeet() - entries.get(1).elevationFeet();
-        float twoWeekChange = entries.get(0).elevationFeet() - entries.get(14).elevationFeet();
-        float oneYearChange = entries.get(0).elevationFeet() - entries.get(365).elevationFeet();
+        float oneDayChange = todayElevation - dataset.dateIndex().get(todayDate.minusDays(1)).elevationFeet();
+        float twoWeekChange = todayElevation - dataset.dateIndex().get(todayDate.minusWeeks(2)).elevationFeet();
+        float oneYearChange = todayElevation - dataset.dateIndex().get(todayDate.minusYears(1)).elevationFeet();
 
-        float tenYearAverage = (float) entries.stream()
-                .filter(entry -> {
-                    // Same month and day as current entry
-                    return entry.date().getMonth() == mostRecentEntry.date().getMonth()
-                            && entry.date().getDayOfMonth() == mostRecentEntry.date().getDayOfMonth()
-                            // Within last 10 years (not counting current year)
-                            && entry.date().getYear() < mostRecentEntry.date().getYear()
-                            && entry.date().getYear() >= mostRecentEntry.date().getYear() - 10;
-                })
-                .mapToDouble(RawLakeLevelData.LakeLevelEntry::elevationFeet)
-                .average()
-                .orElseThrow();
+        float tenYearAverage = multiYearAverageOnThisDate(todayDate, 10, dataset);
 
         return new CurrentConditions(
-                dataObject.lake(),
-                lakeLevelData.collectedAt(),
-                mostRecentEntry.date(),
-                mostRecentEntry.elevationFeet(),
+                dataset.lake(),
+                collectorResponse.collectedAt(),
+                todayDate,
+                todayElevation,
                 oneDayChange,
                 twoWeekChange,
                 oneYearChange,
-                tenYearAverage - mostRecentEntry.elevationFeet()
+                todayElevation - tenYearAverage,
+                ""
         );
+    }
+
+    private float multiYearAverageOnThisDate(LocalDate startDate, Integer years, LakeLevelDataset dataset) {
+        Map<LocalDate, LakeLevelDataset.LakeLevelEntry> indexedData = dataset.dateIndex();
+
+        float runningSum = 0;
+        for (int i = 0; i < years; i++) {
+            LakeLevelDataset.LakeLevelEntry entry = indexedData.get(startDate.minusYears(i + 1));
+
+            if (entry == null) {
+                //TODO: Notify ErrorAggregator that data ran out
+                break;
+            }
+
+            runningSum += entry.elevationFeet();
+        }
+
+        return runningSum / years;
     }
 }
